# game_of_life_in_kafka

./: Cargo.toml  Dockerfile  README.md
docker/: .env  docker-compose.yml
src/: errors.rs  frontend.rs  lib.rs  life_cell.rs  main.rs  pre_initial.rs  send_start.rs
src/game/: life_cell.rs  life_cell_processor.rs  mod.rs
