[package]
name = "game_of_life_in_kafka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pre_initial"
path = "src/pre_initial.rs"

[[bin]]
name = "life_cell"
path = "src/life_cell.rs"

[dependencies]
kafkang = "0.2.1"
tokio = {version = "1.49.0", features = ["full"]}
structopt = "0.3.26"
log = "0.4.29"
env_logger = "0.11.9"
anyhow = "1.0.101"
